--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -206,7 +206,7 @@
 
 @media (max-width: 900px) {
   #export-hub {
-    bottom: 72px;
+    bottom: calc(72px + env(safe-area-inset-bottom, 0px));
     width: calc(100vw - 32px);
     max-width: 320px;
   }
